classDiagram
    direction TB

    %% ────────────── Singleton ──────────────
    class Database {
        - static instance: Database
        - collections: Map~string, Map~string, any~~
        - constructor()
        + static getInstance() Database
        + getCollection(name: string) Map~string, any~
    }

    %% ────────────── Modelos (Datos puros) ──────────────
    class User {
        + id: string
        + name: string
        + email: string
        + preferredNotification: string
        + active: boolean
    }

    class Subscription {
        + id: string
        + userId: string
        + planName: string
        + startDate: Date
        + endDate: Date
        + status: string
    }

    class Invoice {
        + id: string
        + userId: string
        + amount: number
        + date: Date
        + details: string
    }

    class Plan {
        <<abstract>>
        + name: string
        + price: number
        + features: string[]
        + getDescription() string
    }
    class FreePlan {
        + name = "Free"
        + price = 0
    }
    class PremiumPlan {
        + name = "Premium"
        + price = 9.99
    }

    %% ────────────── Repositorios (Interfaces + Implementaciones) ──────────────
    class IUserRepository {
        <<interface>>
        + save(user: User) void
        + findById(id: string) User
        + findByEmail(email: string) User
        + update(user: User) void
        + delete(id: string) void
    }
    class ISubscriptionRepository {
        <<interface>>
        + save(sub: Subscription) void
        + findByUserId(userId: string) Subscription[]
        + findById(id: string) Subscription
        + update(sub: Subscription) void
        + delete(id: string) void
    }
    class IInvoiceRepository {
        <<interface>>
        + save(invoice: Invoice) void
        + findById(id: string) Invoice
    }

    class UserRepository {
        - db: Database
        + save(user) void
        + findById(id) User
        + findByEmail(email) User
        + update(user) void
        + delete(id) void
    }
    class SubscriptionRepository {
        - db: Database
        + save(sub) void
        + findByUserId(userId) Subscription[]
        + findById(id) Subscription
        + update(sub) void
        + delete(id) void
    }
    class InvoiceRepository {
        - db: Database
        + save(invoice) void
        + findById(id) Invoice
    }

    %% ────────────── Factory Method (Notificaciones y Planes) ──────────────
    class INotifier {
        <<interface>>
        + send(target: string, message: string) void
    }
    class EmailNotifier {
        + send(target, message) void
    }
    class SmsNotifier {
        + send(target, message) void
    }
    class PushNotifier {
        + send(target, message) void
    }
    class NotificationFactory {
        + createNotifier(channel: string) INotifier
    }

    class PlanFactory {
        + createPlan(type: string) Plan
    }

    %% ────────────── Observer (Sujeto y Observadores) ──────────────
    class IObserver {
        <<interface>>
        + update(eventData: any) void
    }
    class PaymentService {
        - observers: IObserver[]
        - invoiceRepo: IInvoiceRepository
        + attach(observer: IObserver) void
        + detach(observer: IObserver) void
        - notify(eventData: any) void
        + processPayment(userId, amount, details) void
    }
    class EmailNotificationObserver {
        - notifierFactory: NotificationFactory
        - userRepo: IUserRepository
        + update(eventData) void
    }
    class MetricsObserver {
        + totalRevenue: number
        + update(eventData) void
    }
    class AccessControlObserver {
        - userRepo: IUserRepository
        + update(eventData) void
    }

    %% ────────────── Servicios (Lógica de negocio) ──────────────
    class UserService {
        - userRepo: IUserRepository
        + registerUser(name, email, preferredNotification) User
    }
    class SubscriptionService {
        - subRepo: ISubscriptionRepository
        - planFactory: PlanFactory
        + subscribeUser(userId, planType) Subscription
    }

    %% ────────────── Controladores (MVC) ──────────────
    class UserController {
        - userService: UserService
        + register(name, email, prefNotification) User
    }
    class SubscriptionController {
        - subService: SubscriptionService
        - paymentService: PaymentService
        + subscribe(user, planType) void
    }

    %% ────────────── Relaciones ──────────────

    %% Repositorios implementan interfaces y usan Database Singleton
    UserRepository ..|> IUserRepository
    SubscriptionRepository ..|> ISubscriptionRepository
    InvoiceRepository ..|> IInvoiceRepository
    UserRepository --> Database : usa
    SubscriptionRepository --> Database : usa
    InvoiceRepository --> Database : usa

    %% Herencia de Planes
    FreePlan --|> Plan
    PremiumPlan --|> Plan
    PlanFactory ..> Plan : crea
    PlanFactory ..> FreePlan : instancia
    PlanFactory ..> PremiumPlan : instancia

    %% Notificaciones
    EmailNotifier ..|> INotifier
    SmsNotifier ..|> INotifier
    PushNotifier ..|> INotifier
    NotificationFactory ..> INotifier : crea
    NotificationFactory ..> EmailNotifier : instancia
    NotificationFactory ..> SmsNotifier : instancia
    NotificationFactory ..> PushNotifier : instancia

    %% Observer: PaymentService es el Sujeto, IObserver los observadores
    PaymentService --> IObserver : notifica
    EmailNotificationObserver ..|> IObserver
    MetricsObserver ..|> IObserver
    AccessControlObserver ..|> IObserver
    EmailNotificationObserver --> NotificationFactory : usa
    EmailNotificationObserver --> IUserRepository : consulta usuario
    AccessControlObserver --> IUserRepository : actualiza acceso

    %% Servicios dependen de abstracciones (DIP)
    UserService --> IUserRepository
    SubscriptionService --> ISubscriptionRepository
    SubscriptionService --> PlanFactory

    %% Controladores usan servicios y PaymentService (Observer)
    UserController --> UserService
    SubscriptionController --> SubscriptionService
    SubscriptionController --> PaymentService : dispara pagos

    %% PaymentService genera Invoice (usa repositorio)
    PaymentService --> IInvoiceRepository : guarda factura
    InvoiceRepository --> Invoice : persiste
    UserRepository --> User : persiste
    SubscriptionRepository --> Subscription : persiste

    %% Flujo de creación de entidades
    UserController ..> User : crea mediante UserService
    SubscriptionController ..> Subscription : crea mediante SubscriptionService
    PaymentService ..> Invoice : crea al procesar pago